# mpv

./: README.md  meson.build  meson.options
TOOLS/osxbundle/mpv.app/Contents/: Info.plist
ci/: build-emscripten-deps.sh  build-emscripten.sh  emscripten-cross.ini  serve-emscripten-browser.py
common/: common.h
etc/: builtin.conf
misc/emscripten/: index.html  meson.build  mpv-browser.js  mpv-web.c  mpv_web_api.c
misc/emscripten/demo/: index.html  main.js  meson.build
misc/emscripten/lib/: README.md  index.ts  meson.build  package.json.in  tsconfig.json
options/: path.c
osdep/: path-emscripten.c  path.h  threads-posix.h  timer-emscripten.c
player/: client.c
